<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/java_md_enc"
        android:name="com.koohai.revdemo.ui.md5Enc.Md5EncJavaFragment"
        android:label="@string/java_md5_enc"
        tools:layout="@layout/fragment_md5encjava" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.koohai.revdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.koohai.revdemo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.koohai.revdemo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/env_check"
        android:name="com.koohai.revdemo.ui.envcheck.EnvCheckFragment"
        android:label="@string/env_check"
        tools:layout="@layout/fragment_slideshow" />


</navigation>